fix(webui): links not showing underline on hover on dark theme

--- a/komga-webui/src/styles/global.css
+++ b/komga-webui/src/styles/global.css
@@ -12,5 +12,4 @@ html {
 
 .link-underline:hover {
     text-decoration: underline;
-    text-decoration-color: black;
 }
